--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+	<link rel="shortcut icon" type="image/x-icon" href="{{site.url}}/favicon.ico?">
 	<link rel="stylesheet" href="{{ site.url }}/assets/css/skeleton/stylesheets/combined.css"/>
 	<title>{{ page.title }}</title>
 	<meta name="application-name" content="Aditya Relangi's Thoughts"/>
