--- a/_includes/postheader.html
+++ b/_includes/postheader.html
@@ -2,6 +2,7 @@
 
 <head>
 	<link rel="stylesheet" href="{{ site.url }}/assets/css/skeleton/stylesheets/combined.css"/>
+	<link rel="shortcut icon" type="image/x-icon" href="{{site.url}}/favicon.ico?">
 	<link rel="icon" type="image/png" href="/favicon-196x196.png" sizes="196x196">
 	<link rel="icon" type="image/png" href="/favicon-160x160.png" sizes="160x160">
 	<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
