--- a/blog/assets/css/skeleton/stylesheets/combined.css
+++ b/blog/assets/css/skeleton/stylesheets/combined.css
@@ -120,9 +120,7 @@ table {
 
 body {
     background: #fff;
-    font-family: HelveticaNeue "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 18px;
-    line-height: 27px;
+    font: 0.9em Helvetica, Arial, sans-serif;
     color: #444;
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%
